--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "homepage": "https://github.com/lukezhang454/Pro2Pro#readme",
   "devDependencies": {
     "angular": "^1.6.6",
+    "angular-animate": "^1.6.7",
     "angular-ui-bootstrap": "^2.5.6",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
@@ -41,5 +42,8 @@
     "http-server": "^0.10.0",
     "jquery": "^3.2.1",
     "watchify": "^3.9.0"
+  },
+  "dependencies": {
+    "angular-animate": "^1.6.7"
   }
 }
